# L_shape_Lagrange

./: CMakeLists.txt  KnotVector.cpp  KnotVector.h  main.cpp
