cmake_minimum_required(VERSION 3.6)
project(L_shape_Lagrange)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "-O2")
include(FindOpenMP)
if(OPENMP_FOUND)
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()
include_directories("/home/dmiao/download/eigen-eigen-67e894c6cd8f/")
set(SOURCE_FILES main.cpp KnotVector.cpp KnotVector.h spline.cpp spline.h)
add_executable(L_shape_Lagrange ${SOURCE_FILES})